# jari

./: Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml  release.yml
Formula/: jari.rb
completions/: jari.bash  jari.fish  jari.zsh
specs/: spec-001.md  spec-002.md  spec-003.md  spec-004.md  spec-005.md  spec-006.md  spec-007.md  spec-008.md  spec-009.md  spec-010.md  spec-011.md  spec-012.md  spec-013.md  spec-014.md  spec-015.md  spec-016.md  spec-017.md  spec-018.md  spec-019.md  spec-020.md  spec-021.md  spec-022.md  spec-023.md  spec-024.md  spec-025.md  spec-026.md  spec-027.md  spec-028.md  spec-029.md  spec-030.md  spec-031.md  spec-032.md  spec-033.md  spec-034.md  spec-035.md  spec-036.md  spec-037.md  spec-038.md  spec-039.md  spec-040.md  (+22 more)
src/: cli.rs  config.rs  error.rs  logging.rs  main.rs  output.rs
src/adf/: from_markdown.rs  mod.rs  to_markdown.rs
src/client/: comments.rs  fields.rs  issues.rs  mod.rs  projects.rs  search.rs  transitions.rs  users.rs
src/models/: comment.rs  common.rs  field.rs  issue.rs  mod.rs  project.rs  search.rs  transition.rs  user.rs
src/schema/: mod.rs
