[package]
name = "jari"
version = "0.1.0"
edition = "2021"
description = "Jira Cloud CLI for LLM coding agents"
repository = "https://github.com/anomalyco/jari"
license = "MIT"
keywords = ["jira", "cli", "llm", "ai", "agent"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
toml = "0.8"
directories = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
pulldown-cmark = "0.12"
base64 = "0.22"
clap_complete = "4"
rpassword = "7"

[dev-dependencies]
rstest = "0.24"
wiremock = "0.6"
assert-json-diff = "2"
tempfile = "3"
